# heed

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: double-map.rs  ids-bimap.rs
heed/: Cargo.toml
heed-traits/: Cargo.toml
heed-traits/src/: lib.rs
heed-types/: Cargo.toml
heed-types/src/: cow_slice.rs  cow_type.rs  integer.rs  lib.rs  owned_slice.rs  owned_type.rs  serde_bincode.rs  serde_json.rs  str.rs  unaligned_slice.rs  unaligned_type.rs  unit.rs
heed/examples/: all-types.rs  clear-database.rs  cursor-append.rs  multi-env.rs  nested.rs
heed/src/: cursor.rs  database.rs  env.rs  lazy_decode.rs  lib.rs  txn.rs
heed/src/iter/: iter.rs  mod.rs  prefix.rs  range.rs
heed/src/mdb/: lmdb_ffi.rs  mdbx_error.rs  mdbx_ffi.rs  mod.rs
src/: env.rs  txn.rs
src/db/: polymorph.rs
