[package]
name = "heed"
version = "0.10.6"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed MDBX wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["mdbx", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1"
bytemuck = "1.5.0"
byteorder = { version = "1.3.4", default-features = false }
heed-traits = { version = "0.7.0", path = "../heed-traits" }
heed-types = { version = "0.7.2", path = "../heed-types" }
libc = "0.2.80"
mdbx-sys = { version = "0.7.1", optional = true }
once_cell = "1.5.2"
page_size = "0.4.2"
serde = { version = "1.0.118", features = ["derive"], optional = true }
synchronoise = "1.0.0"
thiserror = "1"

[dev-dependencies]
serde = { version = "1.0.118", features = ["derive"] }
bytemuck = { version = "1.5.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
url = "2.2.0"

[features]
# The `serde` feature makes some types serializable,
# like the `EnvOpenOptions` struct.
default = ["mdbx", "serde", "serde-bincode", "serde-json"]

mdbx = ["mdbx-sys"]

# Enable the serde en/decoders for bincode or serde_json
serde-bincode = ["heed-types/serde", "heed-types/bincode"]
serde-json = ["heed-types/serde", "heed-types/serde_json"]

# serde_json features
preserve_order = ["heed-types/preserve_order"]
arbitrary_precision = ["heed-types/arbitrary_precision"]
raw_value = ["heed-types/raw_value"]
unbounded_depth = ["heed-types/unbounded_depth"]
